# rust-kiss-vdb

./: .gitignore  Cargo.toml  README.md
RAG-client-py/: .env.example  pyproject.toml
RAG-client-py/examples/: chat_pdf_proyectos.py  chat_rag_pdf.py  ingest_pdf_to_vdb.py  rag_ollama.py  rag_openai.py
RAG-client-py/src/rustkissvdb/: client.py  config.py  errors.py  rag.py  types.py
codex/: AGENTS.md
docs/: API.md  ARCHITECTURE.md  BENCH.md  CHANGELOG.md  CLI.md  CONFIG.md  DATA_MODELS.md  DEMO.md  PROD_READINESS.md  ROADMAP.md  SDK_PYTHON.md  SECURITY.md  VECTOR_STORAGE.md  openapi.yaml
scripts/: demo.ps1  sse_1000.ps1  write_load.ps1
src/: config.rs  lib.rs  main.rs  server.rs
src/api/: auth.rs  errors.rs  mod.rs  routes_doc.rs  routes_docs.rs  routes_events.rs  routes_search.rs  routes_sql.rs  routes_state.rs  routes_ui.rs  routes_vector.rs
src/docstore/: mod.rs
src/engine/: events.rs  metrics.rs  mod.rs  persist.rs  state.rs  state_db.rs
src/search/: engine.rs  storage.rs  types.rs
src/sqlite/: mod.rs
src/vector/: mod.rs  persist.rs
tests/: auth_ttl_sse_gap.rs  http_state_vector.rs  persistence.rs  sqlite_api.rs  sse.rs  vector_persist.rs
ui/: index.html
