[package]
name = "rust-kiss-vdb"
version = "0.1.0"
edition = "2025"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.7", features = ["macros"] }
futures-util = "0.3"
parking_lot = "0.12"
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hnsw_rs = "0.3"
bincode = "1"
anndists = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.21"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tempfile = "3"
